# dada

./: config.py  pyproject.toml  requirements.txt
app/: __init__.py  email_service.py  forms.py  main.py  models.py  routes.py  utils.py
app/static/css/: styles.css
app/static/js/: script.js
app/templates/: admin_dashboard.html  admin_view_user.html  base.html  delete_user.html  edit_user.html  forgot_password.html  home.html  layout.html  login.html  measurement_form.html  profile.html  register.html  reset_password.html
instance/: sie.db  site.db  sitex.db
