[tool.poetry]
name = "flax"
version = "0.1.0"
description = "suit app dada"
authors = ["William <wpitts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-mail = "^0.10.0"
flask-wtf = "^1.2.2"
wtforms = "^3.2.1"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
email-validator = "^2.2.0"
flask-migrate = "^4.1.0"
flask-bcrypt = "^1.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
